Updated AbsolutionBase.cs with hopefully clearer config items Updated AbsolutionBase.cs to remove absolutionStacks if all AbsolutionBase items are LostAbsolution Added some images which I can hopefully use for ThunderStores mod page Did a release build Tried to automate thunderstore package creation

--- a/FerthsArmory.csproj
+++ b/FerthsArmory.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>        
   </PropertyGroup>
 
   <ItemGroup>
@@ -81,5 +81,9 @@
       <HintPath>libs\Wwise.dll</HintPath>
     </Reference>
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="powershell.exe D:\Project.Repositories\FerthsArmory\ThunderStore\PackThunderStore.ps1" />
+  </Target>
 
 </Project>
